Comments: fixed missing background color

--- a/www/views/Extjs3/themes/Paper/src/_go-style.scss
+++ b/www/views/Extjs3/themes/Paper/src/_go-style.scss
@@ -1912,7 +1912,7 @@ table[id^="comments-ext"] b {
 		color: color($fg, 'text');
 		font-weight: $font-weight-r;
 		line-height: dp(24);
-		background-color: white;
+//		background-color: white;
 	}
 
 	a:link, a:visited, a:active {
